--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,91 @@
+# Logs
+frontend/logs
+frontend/*.log
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/pnpm-debug.log*
+frontend/lerna-debug.log*
+
+frontend/node_modules
+frontend/dist
+frontend/dist-ssr
+frontend/*.local
+
+# Editor directories and files
+frontend/.vscode/*
+!frontend/.vscode/extensions.json
+frontend/.idea
+frontend/.DS_Store
+frontend/*.suo
+frontend/*.ntvs*
+frontend/*.njsproj
+frontend/*.sln
+frontend/*.sw?
+
 # Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+backend/__pycache__/
+backend/*.py[cod]
+backend/*$py.class
+backend/bike/__pycache__/
+backend/bike/*.py[cod]
+backend/bike/*$py.class
 
 # C extensions
-*.so
+backend/*.so
 
 # Distribution / packaging
-.Python
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+backend/.Python
+backend/env/
+backend/venv/
+backend/ENV/
+backend/env.bak/
+backend/venv.bak/
 
 # Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+backend/pip-log.txt
+backend/pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
+backend/htmlcov/
+backend/.tox/
+backend/.nox/
+backend/.coverage
+backend/.coverage.*
+backend/.cache
+backend/nosetests.xml
+backend/coverage.xml
+backend/*.cover
+backend/.hypothesis/
 
 # Pytest
-.pytest_cache/
+backend/.pytest_cache/
 
 # Jupyter Notebook
-.ipynb_checkpoints
+backend/.ipynb_checkpoints
 
 # VS Code settings
-.vscode/
+backend/.vscode/
 
 # Output images or data
-bike/output/
+backend/bike/output/
 
 # System files
-.DS_Store
-Thumbs.db
+backend/.DS_Store
+backend/Thumbs.db
 
 # Environment variables
-.env
-.env.*
+backend/.env
+backend/.env.*
 
 # Ignore requirements lock files (if not used)
-poetry.lock
-Pipfile.lock
+backend/poetry.lock
+backend/Pipfile.lock
 
 # Ignore backup files
-*~
-*.bak
-*.swp
+backend/*~
+backend/*.bak
+backend/*.swp
 
 # Ignore custom files
-*.png
+backend/*.png
