--- a/backend/example.env
+++ b/backend/example.env
@@ -1,21 +1,38 @@
-# OpenAI API Configuration
+# Database Configuration
+DATABASE_URL=postgresql://username:password@localhost:5432/dbname
+
+# OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+GOOGLE_REDIRECT_URI=http://localhost:3000/auth/callback
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_key_here
+
+# Server Configuration
+HOST=0.0.0.0
+PORT=5000
+DEBUG=True
+
+# CORS Configuration
+CORS_ORIGINS=["http://localhost:3000", "http://localhost:5000"]
+
+# API Configuration
+API_PREFIX=/api/v1
+API_TITLE=Build Yourself API
+API_DESCRIPTION=API for building your customs
+API_VERSION=0.1.0
+
+# Feature Flags
+ENABLE_LLM_VALIDATION=true
 
 # Model Configuration
 OPENAI_CHAT_MODEL=gpt-4.1-mini
 OPENAI_IMAGE_MODEL=gpt-4.1-mini
 OPENAI_VALIDATION_MODEL=gpt-4.1-mini
-
-# Feature Flags
-ENABLE_LLM_VALIDATION=true
-
-# Server Configuration
-HOST=0.0.0.0
-PORT=8000
-DEBUG=true
-
-# Database Configuration (if needed in the future)
-# DATABASE_URL=sqlite:///./bike_builder.db
 
 # Logging Configuration
 LOG_LEVEL=INFO
