--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,9 @@ requests>=2.0.0
 python-dotenv>=1.0.0
 uvicorn
 fastapi
+google-auth>=2.0.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
+google-api-python-client>=2.0.0
+PyJWT>=2.0.0
+python-multipart
