--- a/backend/example.env
+++ b/backend/example.env
@@ -7,7 +7,13 @@ OPENAI_API_KEY=your_openai_api_key_here
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
-GOOGLE_REDIRECT_URI=http://localhost:3000/auth/callback
+GOOGLE_REDIRECT_URI=http://localhost:5000/auth/callback
+
+# Frontend URLs
+FRONTEND_BASE_URL=http://localhost:5173
+FRONTEND_DASHBOARD_URL=http://localhost:5173/dashboard
+FRONTEND_CALLBACK_URL=http://localhost:5173/auth/callback
+FRONTEND_SIGNIN_URL=http://localhost:5173/signin
 
 # JWT Configuration
 JWT_SECRET=your_jwt_secret_key_here
