feature: Redis Based Authentication and User session Management added

--- a/backend/env.prod.template
+++ b/backend/env.prod.template
@@ -5,6 +5,10 @@
 DATABASE_URL=postgresql://builduser:buildpass123@postgres:5432/build_yourself
 REDIS_URL=redis://redis:6379
 
+# Session Management
+SESSION_TTL=3600
+SESSION_CLEANUP_INTERVAL=300
+
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
