--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,119 +4,135 @@ services:
   # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
-    container_name: build_yourself_db
+    container_name: build_yourself_db_dev
     restart: unless-stopped
     environment:
-      POSTGRES_DB: build_yourself
-      POSTGRES_USER: builduser
-      POSTGRES_PASSWORD: buildpass123
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_dev:/var/lib/postgresql/data
       - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432"
     networks:
-      - build_yourself_network
+      - build_yourself_network_dev
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U builduser -d build_yourself"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
 
-  # Redis for caching and sessions (optional but recommended)
+  # Redis for development
   redis:
     image: redis:7-alpine
-    container_name: build_yourself_redis
+    container_name: build_yourself_redis_dev
     restart: unless-stopped
     volumes:
-      - redis_data:/data
+      - redis_data_dev:/data
     ports:
-      - "6379:6379"
+      - "${REDIS_PORT}:6379"
     networks:
-      - build_yourself_network
+      - build_yourself_network_dev
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
       timeout: 10s
       retries: 3
 
-  # Backend API
+  # Migration Service
+  migrations:
+    image: postgres:15-alpine
+    container_name: build_yourself_migrations_dev
+    restart: "no"
+    environment:
+      - PGPASSWORD=${DB_PASSWORD}
+      - PGHOST=postgres
+      - PGPORT=5432
+      - PGUSER=${DB_USER}
+      - PGDATABASE=${DB_NAME}
+    volumes:
+      - ./backend/migrations:/migrations:ro
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - build_yourself_network_dev
+    command: >
+      sh -c '
+        echo "Waiting for database to be ready..." &&
+        until pg_isready -h postgres -U ${DB_USER} -d ${DB_NAME}; do
+          echo "Database not ready, waiting..." &&
+          sleep 2
+        done &&
+        echo "Database is ready! Running migrations..." &&
+        if [ -d /migrations ] && [ "$(ls -A /migrations/*.sql 2>/dev/null)" ]; then
+          for file in /migrations/*.sql; do
+            if [ -f "$file" ]; then
+              echo "Running migration: $file" &&
+              psql -h postgres -U ${DB_USER} -d ${DB_NAME} -f "$file"
+            fi
+          done &&
+          echo "All migrations completed successfully!"
+        else
+          echo "No migration files found, skipping migrations."
+        fi
+      '
+
+  # Backend API (Development)
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
-      target: production
+      dockerfile: dockerfile
     container_name: build_yourself_api
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
-      - DATABASE_URL=postgresql://builduser:buildpass123@postgres:5432/build_yourself
+      # Override any specific variables if needed
+      - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}
       - REDIS_URL=redis://redis:6379
-      - HOST=0.0.0.0
-      - PORT=5000
-      - DEBUG=False
-      - ENVIRONMENT=production
     volumes:
       - ./backend:/app
       - /app/__pycache__
       - /app/.pytest_cache
-      - backend_logs:/app/logs
+      - backend_logs_dev:/app/logs
     ports:
-      - "5000:5000"
+      - "${API_PORT}:5000"
     depends_on:
-      postgres:
-        condition: service_healthy
+      migrations:
+        condition: service_completed_successfully
       redis:
         condition: service_healthy
     networks:
-      - build_yourself_network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-
-  # Nginx reverse proxy (optional)
-  nginx:
-    image: nginx:alpine
-    container_name: build_yourself_nginx
-    restart: unless-stopped
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
-    ports:
-      - "80:80"
-      - "443:443"
-    depends_on:
-      - backend
-    networks:
-      - build_yourself_network
+      - build_yourself_network_dev
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000", "--reload"]
 
 volumes:
-  postgres_data:
+  postgres_data_dev:
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: ./data/postgres
-  redis_data:
+      device: ./data/dev/postgres
+  redis_data_dev:
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: ./data/redis
-  backend_logs:
+      device: ./data/dev/redis
+  backend_logs_dev:
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: ./data/logs
+      device: ./data/dev/logs
 
 networks:
-  build_yourself_network:
+  build_yourself_network_dev:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.20.0.0/16
+        - subnet: 172.21.0.0/16
