--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,6 @@ services:
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
     volumes:
       - postgres_data_dev:/var/lib/postgresql/data
-      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     ports:
       - "${DB_PORT}:5432"
     networks:
@@ -42,28 +41,6 @@ services:
       timeout: 10s
       retries: 3
 
-  # Migration Service
-  migrations:
-    build:
-      context: ./backend
-      dockerfile: migration.dockerfile
-    container_name: build_yourself_migrations_dev
-    restart: "no"
-    environment:
-      - PGPASSWORD=${DB_PASSWORD}
-      - PGHOST=postgres
-      - PGPORT=5432
-      - PGUSER=${DB_USER}
-      - PGDATABASE=${DB_NAME}
-    volumes:
-      - ./backend/app/migrations:/migrations:ro
-    depends_on:
-      postgres:
-        condition: service_healthy
-    networks:
-      - build_yourself_network_dev
-    command: ["python", "run_migrations.py"]
-
   # Backend API (Development)
   backend:
     build:
@@ -77,21 +54,21 @@ services:
       # Override any specific variables if needed
       - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}
       - REDIS_URL=redis://redis:6379
-    volumes:
-      - ./backend:/app
-      - /app/__pycache__
-      - /app/.pytest_cache
-      - backend_logs_dev:/app/logs
+    # volumes:
+    #   - ./backend:/app
+    #   - /app/__pycache__
+    #   - /app/.pytest_cache
+    #   - backend_logs_dev:/app/logs
     ports:
       - "${API_PORT}:5000"
     depends_on:
-      migrations:
-        condition: service_completed_successfully
+      postgres:
+        condition: service_healthy
       redis:
         condition: service_healthy
     networks:
       - build_yourself_network_dev
-    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000", "--reload"]
+    # The entrypoint script will handle migrations and start the app
 
 volumes:
   postgres_data_dev:
