fix: revert unnecessary changes and fix project quota display
- Revert schema changes to match existing database structure (completed_projects_count)
- Keep free_projects_remaining as a calculated property in the model
- Fix CreateNewButton component to show project count in correct state

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,5 +29,6 @@ openai>=1.0.0
 
 # Additional utilities
 pydantic>=2.0.0
+pydantic[email]
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
