--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
