feat: Add Privacy Policy and Terms & Conditions pages
- Add Privacy Policy page at /privacy route
- Add Terms & Conditions page at /terms route
- Update router configuration to include legal routes
- Add SEO meta tags for both pages
- Implement responsive layouts with consistent styling
- Update contact email to parimelazhaganbalaji@gmail.com

These pages provide essential legal documentation for user data handling,
service terms, and usage guidelines specific to the bike customization platform.

--- a/nginx/conf.d/default.prod.conf
+++ b/nginx/conf.d/default.prod.conf
@@ -1,20 +1,58 @@
+# HTTP Server Block (listens on port 80 inside container, mapped to 8080 on host)
 server {
     listen 80;
-    server_name localhost;
+    server_name xyz.build-it-yourself.in;
 
-    # Frontend static files
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+
     location / {
-        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
-        
-        # Cache static assets
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-            expires 30d;
-            add_header Cache-Control "public, no-transform";
-        }
     }
 
-    # Backend API proxy
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    location /api/ {
+        proxy_pass http://backend:5000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # CORS headers
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+    }
+}
+
+# HTTPS Server Block (listens on port 443 inside container, mapped to 8443 on host)
+server {
+    listen 443 ssl;
+    server_name xyz.build-it-yourself.in;
+
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
     location /api/ {
         proxy_pass http://backend:5000/;
         proxy_http_version 1.1;
