feat(auth): improve sign-in page layout and validation
- Restructure sign-in page with vertical flow layout
- Add brand logo and name to top-left corner
- Enhance image carousel with better spacing and accessibility
- Fix validation prompt indentation in backend
- Add validation types for better type safety
- Update project service with improved error handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,6 @@
 version: '3.8'
 
 services:
-    nginx:
-    image: nginx:alpine
-    container_name: build_yourself_nginx_dev
-    ports:
-      - "80:80"
-      - "443:443" 
-    volumes:
-      - ./frontend/dist:/usr/share/nginx/html 
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/ssl:/etc/nginx/ssl
-    depends_on:
-      - backend
-    networks:
-      - build_yourself_network_dev
   # PostgreSQL Database
   postgres:
     image: postgres:15-alpine
@@ -59,7 +45,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: dockerfile
+      dockerfile: Dockerfile
     container_name: build_yourself_api
     restart: unless-stopped
     env_file:
